--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -35,11 +35,11 @@
             <!-- Fees Card -->
             <div class="col-md-4 mb-4">
                 <div class="card text-center">
-                    <img src="https://via.placeholder.com/150" class="card-img-top feature-icon mx-auto mt-3" alt="Fees">
+                    <img src="~/images/fees.png" class="card-img-top feature-icon mx-auto mt-3" alt="Fees">
                     <div class="card-body">
                         <h5 class="card-title">Fees</h5>
                         <p class="card-text">View and pay your fees online.</p>
-                        <a href="#" class="btn btn-primary">Go to Fees</a>
+                        <a href="/Fees" class="btn btn-primary">Go to Fees</a>
                     </div>
                 </div>
             </div>
@@ -47,11 +47,11 @@
             <!-- Attendance Card -->
             <div class="col-md-4 mb-4">
                 <div class="card text-center">
-                    <img src="https://via.placeholder.com/150" class="card-img-top feature-icon mx-auto mt-3" alt="Attendance">
+                    <img src="~/images/Attendance.png" class="card-img-top feature-icon mx-auto mt-3" alt="Attendance">
                     <div class="card-body">
                         <h5 class="card-title">Attendance</h5>
                         <p class="card-text">Check your attendance records.</p>
-                        <a href="#" class="btn btn-primary">Go to Attendance</a>
+                        <a href="/Attendance" class="btn btn-primary">Go to Attendance</a>
                     </div>
                 </div>
             </div>
@@ -59,11 +59,11 @@
             <!-- Profile Card -->
             <div class="col-md-4 mb-4">
                 <div class="card text-center">
-                    <img src="https://via.placeholder.com/150" class="card-img-top feature-icon mx-auto mt-3" alt="Profile">
+                    <img src="~/images/Profile.png" class="card-img-top feature-icon mx-auto mt-3" alt="Profile">
                     <div class="card-body">
                         <h5 class="card-title">Profile</h5>
                         <p class="card-text">Update and manage your profile.</p>
-                        <a href="#" class="btn btn-primary">Go to Profile</a>
+                        <a href="/Profile" class="btn btn-primary">Go to Profile</a>
                     </div>
                 </div>
             </div>
@@ -71,11 +71,11 @@
             <!-- Marks Card -->
             <div class="col-md-4 mb-4">
                 <div class="card text-center">
-                    <img src="https://via.placeholder.com/150" class="card-img-top feature-icon mx-auto mt-3" alt="Marks">
+                    <img src="~/images/Marks.png" class="card-img-top feature-icon mx-auto mt-3" alt="Marks">
                     <div class="card-body">
                         <h5 class="card-title">Marks</h5>
                         <p class="card-text">View your academic marks and results.</p>
-                        <a href="#" class="btn btn-primary">Go to Marks</a>
+                        <a href="/Marks" class="btn btn-primary">Go to Marks</a>
                     </div>
                 </div>
             </div>
@@ -83,11 +83,11 @@
             <!-- Timetable Card -->
             <div class="col-md-4 mb-4">
                 <div class="card text-center">
-                    <img src="https://via.placeholder.com/150" class="card-img-top feature-icon mx-auto mt-3" alt="Timetable">
+                    <img src="~/images/Timetable.png" class="card-img-top feature-icon mx-auto mt-3" alt="Timetable">
                     <div class="card-body">
                         <h5 class="card-title">Timetable</h5>
                         <p class="card-text">Check your class schedule.</p>
-                        <a href="#" class="btn btn-primary">Go to Timetable</a>
+                        <a href="/Timetable" class="btn btn-primary">Go to Timetable</a>
                     </div>
                 </div>
             </div>
@@ -95,11 +95,11 @@
             <!-- Library Card -->
             <div class="col-md-4 mb-4">
                 <div class="card text-center">
-                    <img src="https://via.placeholder.com/150" class="card-img-top feature-icon mx-auto mt-3" alt="Library">
+                    <img src="~/images/Library.png" class="card-img-top feature-icon mx-auto mt-3" alt="Library">
                     <div class="card-body">
                         <h5 class="card-title">Library</h5>
                         <p class="card-text">Access library resources and books.</p>
-                        <a href="#" class="btn btn-primary">Go to Library</a>
+                        <a href="/Library" class="btn btn-primary">Go to Library</a>
                     </div>
                 </div>
             </div>
