--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using AIMSR
 @using AIMSR.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using Microsoft.AspNetCore.Identity
+@using AIMSR.Areas.Identity
+@using AIMSR.Areas.Identity.Pages
