--- a/Views/Timetable/Timetable.cshtml
+++ b/Views/Timetable/Timetable.cshtml
@@ -1,62 +1,69 @@
 ﻿@{
     ViewData["Title"] = "Timetable";
 }
-
 <div class="container mt-4">
-    <h2 class="text-center">Weekly Timetable</h2>
-    <p class="text-center">Check your class schedule for the week.</p>
+    <h2 class="text-center">MCA Semester II Timetable</h2>
+    <p class="text-center">Academic Year: 2024-2026 | Effective from 15th January 2025</p>
 
     <table class="table table-bordered mt-4">
         <thead class="table-dark">
             <tr>
                 <th>Day</th>
-                <th>9:00 AM - 10:00 AM</th>
-                <th>10:00 AM - 11:00 AM</th>
-                <th>11:00 AM - 12:00 PM</th>
-                <th>1:00 PM - 2:00 PM</th>
-                <th>2:00 PM - 3:00 PM</th>
+                <th>09:00 - 10:30 AM</th>
+                <th>10:45 - 12:15 PM</th>
+                <th>12:45 - 2:45 PM</th>
+                <th>3:00 - 5:00 PM</th>
+                <th>5:00 - 6:00 PM</th>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <td>Monday</td>
-                <td>Mathematics</td>
-                <td>Physics</td>
-                <td>Computer Science</td>
-                <td>Lunch Break</td>
-                <td>Chemistry</td>
+                <td>Research Methodology (MCA21) <br> Prof. Rashmi Pathak</td>
+                <td>Research Methodology (MCA21) <br> Prof. Rashmi Pathak</td>
+                <td>AI & ML Lab (MCAL22) <br> Prof. Ramakrishnan Iyer</td>
+                <td>Networking with Linux Lab (MCAL27) <br> Prof. Sweta Nigam</td>
+                <td>-</td>
             </tr>
             <tr>
                 <td>Tuesday</td>
-                <td>Computer Science</td>
-                <td>Mathematics</td>
-                <td>English</td>
-                <td>Lunch Break</td>
-                <td>Physics</td>
+                <td>Artificial Intelligence (MCA22) <br> Prof. Ramakrishnan Iyer</td>
+                <td>Artificial Intelligence (MCA22) <br> Prof. Ramakrishnan Iyer</td>
+                <td>DevOps Lab (MCAL23) <br> Prof. Rashmi Pathak</td>
+                <td>Computer Networks (MCABR4) <br> Prof. Sweta Nigam</td>
+                <td>Mini Project (MCAP21) <br> All Faculty</td>
             </tr>
             <tr>
                 <td>Wednesday</td>
-                <td>Chemistry</td>
-                <td>English</td>
-                <td>Physics</td>
-                <td>Lunch Break</td>
-                <td>Mathematics</td>
+                <td>Robotic Process Automation (MCAE242) <br> Prof. Ramakrishnan Iyer</td>
+                <td>Robotic Process Automation (MCAE242) <br> Prof. Ramakrishnan Iyer</td>
+                <td>Soft Skill Development (MCAL21) <br> Prof. Dinesh Mehra</td>
+                <td>Research Methodology Tutorial (MCA21) <br> Prof. Rashmi Pathak</td>
+                <td>Information System (MCALE252) <br> Dr. Neeta Bhatt</td>
             </tr>
             <tr>
                 <td>Thursday</td>
-                <td>Physics</td>
-                <td>Computer Science</td>
-                <td>Mathematics</td>
-                <td>Lunch Break</td>
-                <td>English</td>
+                <td>Information Security (MCA23) <br> Prof. Sweta Nigam</td>
+                <td>Information Security (MCA23) <br> Prof. Sweta Nigam</td>
+                <td>Robotic Process Automation Lab (MCALE242) <br> Prof. Ramakrishnan Iyer</td>
+                <td>User Interface Lab (MCAL26) <br> Prof. Ramakrishnan Iyer</td>
+                <td>-</td>
             </tr>
             <tr>
                 <td>Friday</td>
-                <td>English</td>
-                <td>Chemistry</td>
-                <td>Physics</td>
-                <td>Lunch Break</td>
-                <td>Computer Science</td>
+                <td>Management Information System (MCALE252) <br> Dr. Neeta Bhatt</td>
+                <td>Management Information System (MCALE252) <br> Dr. Neeta Bhatt</td>
+                <td>Advanced Web Technologies Lab (MCAL25) <br> Prof. Rashmi Pathak</td>
+                <td>Advanced Web Technologies Lab (MCAL25) <br> Prof. Rashmi Pathak</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>Saturday</td>
+                <td>Discrete Mathematics (MCABR5) <br> Prof. Pradep Joshi</td>
+                <td>Discrete Mathematics (MCABR5) <br> Prof. Pradep Joshi</td>
+                <td>Operating System (MCABR) <br> Prof. Sweta Nigam</td>
+                <td>Operating System (MCABR) <br> (1 hour) <br> Prof. Sweta Nigam</td>
+                <td>Computer Network (MCABR4) <br> (1 hour) <br> Prof. Sweta Nigam</td>
             </tr>
         </tbody>
     </table>
